--- a/Bombay Groove/watch-listen.html
+++ b/Bombay Groove/watch-listen.html
@@ -77,7 +77,7 @@
       <div class="watch-listen-container">
         <div class="row justify-content-md-center">
           <div class="col-md-6">
-            <h3 class="watch-listen-header text-uppercase">Watch & Listen</h3>
+            <h3 class="watch-listen-header text-uppercase">Media</h3>
           </div>
         </div>
 
@@ -96,83 +96,49 @@
             </section>
           </div>
         </div>
-<br>
- <!---       <div class="row justify-content-md-center">
-          <div class="audio-container">
-            <div class="col-12 col-lg-4 col-sm-6"> --->
-        <div class="audio-players">   
-            <ul>
-            <li>
-            <iframe
-              width="100%"
-              height="150"
-              align="left"
-              scrolling="no"
-              frameborder="no"
-              allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-            ></iframe>
-        
-              <a
-                href="https://soundcloud.com/user-555254094"
-                title="Bombay Groove"
-                target="_blank"
-                style="color: #cccccc; text-decoration: none;"
-                >Bombay Groove</a>
-              <a
-                href="https://soundcloud.com/user-555254094/04-make-you-feel-my-love"
-                title="04 Make You Feel My Love"
-                target="_blank"
-                style="color: #cccccc; text-decoration: none;"
-                >Make You Feel My Love
-                </a>
-             </li>   
-<!---            </div>
 
-       <div class="row justify-content-md-center">
-            <div class="col-12 col-lg-4 col-sm-6"> --->
+<br>
+
+<div class="audio-container">
+    <div class="audio-players">   
+        <div class="row justify-content-center"> 
+            <div class="col-md-4">
+            <ul style="list-style-type:none" style="padding-inline-start-0">
             <li>
-            <iframe width="100%" height="150" align="right" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848613004&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-            <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-            <a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> 
-            <a href="https://soundcloud.com/user-555254094/your-song" title="Your Song" target="_blank" style="color: #cccccc; text-decoration: none;">Your Song</a>
-            </div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848818366&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/04-make-you-feel-my-love" title="04 Make You Feel My Love" target="_blank" style="color: #cccccc; text-decoration: none;">04 Make You Feel My Love</a></div>
+             </li>  
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848613004&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/your-song" title="Your Song" target="_blank" style="color: #cccccc; text-decoration: none;">Your Song</a></div>
             </li>
             <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848608504&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/billie-jean" title="Billie Jean" target="_blank" style="color: #cccccc; text-decoration: none;">Billie Jean</a></div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848608504&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/billie-jean" title="Billie Jean" target="_blank" style="color: #cccccc; text-decoration: none;">Billie Jean</a></div>
             </li>
             <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/jar-of-hearts" title="Jar Of Hearts" target="_blank" style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/jar-of-hearts" title="Jar Of Hearts" target="_blank" style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
+            </li>
+          </ul>  
+          </div>
+
+          <div  class="col-md-4">
+          <ul style="list-style-type:none"  style="padding-inline-start-0">  
+            <li>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/tum-hi-ho" title="Tum Hi Ho" target="_blank" style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a></div>
             </li>
             <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848606644&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/jar-of-hearts" title="Jar Of Hearts" target="_blank" style="color: #cccccc; text-decoration: none;">Jar Of Hearts</a></div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/pehla-nasha" title="Pehla Nasha" target="_blank" style="color: #cccccc; text-decoration: none;">Pehla Nasha</a></div>
             </li>
             <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848594488&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/tum-hi-ho" title="Tum Hi Ho" target="_blank" style="color: #cccccc; text-decoration: none;">Tum Hi Ho</a></div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/teri-meri" title="Teri Meri" target="_blank" style="color: #cccccc; text-decoration: none;">Teri Meri</a></div>
             </li>
             <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848605237&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/pehla-nasha" title="Pehla Nasha" target="_blank" style="color: #cccccc; text-decoration: none;">Pehla Nasha</a></div>
-            </li>
-            <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848599888&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/teri-meri" title="Teri Meri" target="_blank" style="color: #cccccc; text-decoration: none;">Teri Meri</a></div>
-            </li>
-            <li>
-            <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao" title="Agar Tum Mil Jao" target="_blank" style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a></div>
+            <iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/848591326&color=%23ff4f4f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/user-555254094" title="Bombay Groove" target="_blank" style="color: #cccccc; text-decoration: none;">Bombay Groove</a> · <a href="https://soundcloud.com/user-555254094/agar-tum-mil-jao" title="Agar Tum Mil Jao" target="_blank" style="color: #cccccc; text-decoration: none;">Agar Tum Mil Jao</a></div>
             </li>
   
   </ul>   
-
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-</div>
+            </div>
+     
 
-    <audio controls>
-  <source src="assets/audio/jar-of-hearts.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
       <!------Footer------>
 
       <footer class="container-fluid">
